--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.8.RELEASE</version>
 	</parent>
+	<properties>
+		<maven.compiler.source>8</maven.compiler.source>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
